# git-vendor

./: .deny.toml  .gitignore  .release-please-config.json  .release-please-manifest.json  .rules  CHANGELOG.md  COPYRIGHT  Cargo.toml  README.md
.github/workflows/: CD.yml  CI.yml  Lint.yml  Version.yml
.zed/: settings.json
crates/git-filter-tree/: CHANGELOG.md  Cargo.toml
crates/git-set-attr/: CHANGELOG.md  Cargo.toml
crates/git-vendor/: Cargo.toml
plumbing/git-filter-tree/: CHANGELOG.md  Cargo.toml
plumbing/git-filter-tree/src/: lib.rs  main.rs
plumbing/git-set-attr/: CHANGELOG.md  Cargo.toml
src/: cli.rs  lib.rs  main.rs
tests/: vendor.rs
xtask/: Cargo.toml
