[workspace]
resolver = "3"
members = [".", "crates/*"]

[workspace.package]
edition = "2024"
publish = false

[workspace.dependencies]
git2 = "0.20.4"

[package]
name = "git-template"
version = "0.0.0"
edition.workspace = true
publish.workspace = true

[dependencies]
git-filter-tree = { path = "crates/git-filter-tree" }
git-vendor = { path = "crates/git-vendor" }
