[package]
name = "git-filter-tree"
version = "0.0.1"
edition.workspace = true
publish.workspace = true

[[bin]]
name = "git-filter-tree"
required-features = ["cli"]

[features]
cli = ["dep:clap"]

[dependencies]
git2.workspace = true
globset = "0.4"
clap = { version = "4.5", features = ["derive"], optional = true }
